--- a/less/assistant.less
+++ b/less/assistant.less
@@ -95,3 +95,29 @@ color: #0066FF;
 .test {
     margin-top: 50px;
 }
+
+.about {
+
+    &__wrap{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+}
+
+.about-text {
+    width: 60%;   
+    text-align: justify;
+    // max-width: 746px;;
+}
+
+
+.about-form {
+    display: flex;
+    width: 30%;  
+    z-index: 999; 
+}
+
+.admission-form {
+    // align-items: flex-start;
+}
