--- a/less/style.less
+++ b/less/style.less
@@ -1007,7 +1007,8 @@ summary {
         position: relative;
         margin: 0 auto 16px;
         height: 5px;
-        width: 542px;
+        width: 80%;
+        max-width: 542px;
         background: linear-gradient(180.08deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
 
         &--slide-item {
@@ -1065,6 +1066,9 @@ summary {
     background-repeat: no-repeat;
     background-position: center center;
 
+    &__mobile-navigations{
+        display: none;
+    }
     .square-decorate {
         top: -65%;
         z-index: 2;
