--- a/css/media.css
+++ b/css/media.css
@@ -453,6 +453,10 @@
   .admission-item-wrap {
     flex-direction: column;
   }
+  .btn--university {
+    padding: 10px 20px;
+    font-size: 15px;
+  }
 }
 @media screen and (max-width: 800px) {
   .header--sticky {
@@ -559,6 +563,10 @@
   }
 }
 @media screen and (max-width: 720px) {
+  .dots-decorate,
+  .diamond-decorate {
+    display: none;
+  }
   .steps-wrap {
     flex-direction: column;
     justify-content: center;
@@ -592,6 +600,21 @@
     border-top: 3px solid red;
     bottom: -16px;
     transform: rotate(20deg);
+  }
+  .academic-header__icon {
+    width: 49px;
+  }
+  .academic-header__title {
+    font-size: 40px;
+  }
+  .academic-header__content {
+    justify-content: center;
+  }
+  .academic__years {
+    font-size: 20px;
+  }
+  .academic__title {
+    font-size: 18px;
   }
   .banner {
     display: none;
@@ -646,12 +669,13 @@
     width: 100vw;
     padding-bottom: 30px;
     max-width: 100vw;
-    left: -20px;
     bottom: -137px;
+    left: -20px;
   }
   .header-slider__nav-list {
     display: flex;
     align-items: center;
+    margin-left: -20px;
   }
   .header-slider__nav-item {
     width: 16.66%;
@@ -672,6 +696,10 @@
   }
   .slider-line {
     display: none;
+  }
+  .header-slider__nav-item--active {
+    font-size: 15px;
+    line-height: 1;
   }
   .square-decorate {
     display: none;
@@ -700,8 +728,93 @@
   .header-slider__info {
     display: none;
   }
+  .universities {
+    margin: 0px 0 40px;
+    padding-top: 20px;
+  }
+  .universities::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 11px;
+    background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.75%);
+  }
   .universities .square-decorate {
     display: none;
+  }
+  .universities__mobile-navigations {
+    margin: 14px 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  .universities__slider .slick-track {
+    padding: 0;
+  }
+  .btn--university-top-universities,
+  .btn--university-universities-russia,
+  .btn--university-universities-ukraine {
+    display: none;
+  }
+  .btn--university {
+    padding: 10px;
+    font-size: 14px;
+    margin-right: 0;
+  }
+  .courses .slick-track {
+    padding: 0;
+  }
+  .btn--university:last-of-type {
+    margin: 0;
+  }
+  .btn--university-ukraine-mobile {
+    margin-left: 0;
+  }
+  .btn--university-universities-more {
+    margin: 0px auto !important;
+  }
+  .slider-nav {
+    margin: 0;
+  }
+  .universities__slider,
+  .courses__slider {
+    margin: 21px 0;
+  }
+  .btn-wrap--university {
+    margin: auto;
+    width: 69%;
+    position: absolute;
+    justify-content: space-between;
+    display: flex;
+    left: 50%;
+    transform: translate(-50%, 0);
+    bottom: 66px;
+  }
+  .btn-wrap--courses {
+    margin: auto;
+    width: 69%;
+    position: absolute;
+    justify-content: space-between;
+    display: flex;
+    left: 50%;
+    transform: translate(-50%, 0);
+    bottom: 66px;
+  }
+  .benefits-items {
+    display: flex;
+  }
+  .benefits-item {
+    padding: 15px 10px;
+    flex-basis: 138px;
+    font-size: 14px;
+  }
+  .benefits-item__icon {
+    width: 69px;
+    height: 69px;
+  }
+  .benefits-item__info::before {
+    content: "";
+    width: 80%;
   }
 }
 @media screen and (max-width: 570px) {
@@ -755,5 +868,35 @@
   .header-slider__nav {
     position: relative;
     margin-top: 176px;
+  }
+  .header-slider__nav-list {
+    margin-left: 0;
+  }
+  .academic-header {
+    padding: 14px 0;
+  }
+  .academic-header__icon {
+    width: 40px;
+  }
+  .academic-header__title {
+    font-size: 25px;
+  }
+  .academic__years {
+    font-size: 11px;
+  }
+  .academic__title {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .btn--university {
+    font-size: 10px;
+  }
+  .academic-header__title {
+    font-size: 22px;
+  }
+  .benefits-item {
+    flex-basis: 113px;
+    font-size: 10px;
   }
 }
