--- a/less/assistant.less
+++ b/less/assistant.less
@@ -1,8 +1,173 @@
-.comment-item {
+.header-slider{
+    background-image: url('../img//photo/assistent-img-bg.png');
+}
+
+
+.test {
+    margin-top: 50px;
+}
+
+.about {
+
+    &__wrap{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+}
+
+.about-text {
+    width: 60%;   
+    text-align: justify;
+    // max-width: 746px;;
+}
+
+
+.about-form {
+    display: flex;
+    width: 30%;  
+    z-index: 999; 
+}
+
+.admission-form {
+    // align-items: flex-start;
+}
+
+.check-universe {
+    &__wrap {
+        display: flex;
+        width: 60%;
+    }
+
+    &__buttons {
+        display: flex;
+        flex-direction: column;
+        margin-right: 20px;
+    }
+
+    &__btn {
+        margin: 9px 0;
+        padding: 6px 16px;
+        width: 146px;
+        text-transform: uppercase;
+        color: #fff;
+        background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        border-radius: 18.5px;
+        font-size: 20px;
+        text-align: center;
+
+        &--active{
+            background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
+            position: relative;
+
+           
+        }
+    }
+
+    &__list{
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        &::before{
+            content: "";
+            position: absolute;
+            left: -20px;
+            top: 50%;
+            transform: translate(-50%, 0);
+            height: 3px;
+            background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+            // width: 100%;
+            width: 100px;
+            z-index: -1;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 11px;
+            height: 11px;
+            border-radius: 50%;
+            left: -20px;
+            top: 50%;
+            transform: translate(-50%, 0);
+            background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%);
+        }
+    }
+}
+
+.universe-item {
+    position: relative;
+    padding: 25px 9px 7px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 18px;
+    flex-basis: 100px;
+
+    &::before {
+        content: url('../img/icons/arrows-asisstent-top.svg');
+        position: absolute;
+        top: -4px;
+        left: 50%;
+        opacity: 0;
+        transform: translate(-50%, 0);
+      }
+
+      &::after {
+        content: url('../img/icons/arrows-asisstent-bottom.svg');
+        position: absolute;
+        left: 50%;
+        bottom: -7px;
+        transform: translate(-50%, 0);
+        opacity: 0;
+      }
+
+    &__title {        
+        font-size: 17px;
+        text-align: center;
+        text-transform: uppercase;
+        color:#00369C;
+    }
+
+    &__line {
+        margin: 10px 0;
+        width: 95%;
+        height: 3px;
+        border: none;
+        background: linear-gradient(137.45deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
+        border-radius: 1.5px
+    }
+
+    &__text {
+        font-size: 12px;
+        text-align: center;
+        color: #B4B4B4;
+    }
+}
+
+.universe-item:hover::before {
+   opacity: 1;
+}
+
+.universe-item:hover::after {
+    opacity: 1;
+ }
+
+
+ .comment {
+     &__wrap {
+       display: flex;
+     }
+ }
+
+ .comments {
+    width: 60%;
+ }
+ .comment-item {
     padding: 0 20px 15px;
     margin-top: 40px;
     margin-bottom: 40px;
-    max-width: 653px;;
+    max-width: 712px;
     position: relative;
     background: #FFFFFF;
     // border-radius: 24px;
@@ -12,8 +177,12 @@
     border-bottom-left-radius:24px;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
     border: 1px solid #ccc;
-    margin-left: 20px;
     background-color: #fff;
+
+    &--response{
+        max-width: 692px;
+        margin-left: 54px;
+    }
   
  
     // &__wrap {
@@ -46,18 +215,13 @@
         &-wrap {
            position: relative;
            font-style: normal;
-font-weight: bold;
-font-size: 18px;
-line-height: 133.3%;
-color: #0066FF;
-        //   
+            font-weight: bold;
+            font-size: 18px;
+            line-height: 133.3%;
+            color: #0066FF;
+
         }
-        //   background-color: #fff;
-        //     font-weight: bold;
-        //     font-size: 18px;
-        //     color:#0031C4;
-        //     border-bottom: 2px solid #FF0000;
-        // }
+       
     }
 
     &__line {
@@ -92,32 +256,4 @@ color: #0066FF;
     }
 }
 
-.test {
-    margin-top: 50px;
-}
 
-.about {
-
-    &__wrap{
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
-}
-
-.about-text {
-    width: 60%;   
-    text-align: justify;
-    // max-width: 746px;;
-}
-
-
-.about-form {
-    display: flex;
-    width: 30%;  
-    z-index: 999; 
-}
-
-.admission-form {
-    // align-items: flex-start;
-}
