--- a/less/style.less
+++ b/less/style.less
@@ -1007,7 +1007,7 @@ summary {
         position: relative;
         margin: 0 auto 16px;
         height: 5px;
-        width: 80%;
+        width: 100%;
         max-width: 542px;
         background: linear-gradient(180.08deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
 
@@ -1155,13 +1155,6 @@ summary {
         border-bottom: 5px solid #CE0000;
     }
 
-    // :hover .btn{
-    //     background:#CE0000 !important;
-    // }
-
-    // :hover > a{
-    //     background-color:#CE0000 !important;
-    // }
     &__content{
         padding: 8px 8px 17px 8px;
     }
@@ -1226,8 +1219,6 @@ summary {
 }
 .slider-nav-btn {
     border: none;
-    // width: 35px;
-    // height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1798,7 +1789,7 @@ summary {
                            
     }
 
-    &__header {
+    &__headers {
         grid-area: header;
     }
     &__info {
