--- a/less/media.less
+++ b/less/media.less
@@ -1244,7 +1244,10 @@
             font-size: 14px;
         }
     }
-
+    .gallery-slider-mobile {
+        display: block;
+    }
+    
     .feedback-item {
 
         &__img {
