--- a/less/assistant.less
+++ b/less/assistant.less
@@ -221,24 +221,62 @@
     width: 60%;
  }
  .comment-item {
+     position: relative;
+     z-index: 2;
     padding: 0 20px 15px;
     margin-top: 40px;
     margin-bottom: 40px;
     max-width: 712px;
     position: relative;
     background: #FFFFFF;
-    // border-radius: 24px;
     border-top-right-radius:24px;
-    // border-top-left-radius:24px;
     border-bottom-right-radius:24px;
     border-bottom-left-radius:24px;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
     border: 1px solid #ccc;
     background-color: #fff;
-
+    display: flex;
+    flex-direction: column;
+    &--question{
+        &::before {
+            content: '';
+            position: absolute;
+            width: 2.68px;
+            height: 70.45px;
+            background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
+            border-radius: 2.5px;
+            bottom: -70px;
+            left: 20px;
+          
+        }
+    }
     &--response{
         max-width: 692px;
         margin-left: 54px;
+        &::before {
+          
+            content: '';
+            top: 25px;
+            left: -34px;
+            position: absolute;
+            height: 2.68px;
+            width: 34.46px;
+            background: linear-gradient(207.28deg, #ff0000 9.11%, #ce0000 98.12%);
+            border-radius: 2.5px;
+
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            width: 4.46px;
+            height: 4.46px;
+            border-radius: 50%;
+            top: 25px;
+            left: -2px;
+            /* Linear */
+            
+            background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+        }
     }
   
  
@@ -305,11 +343,12 @@
 
     &__btn {
         font-size: 15px;
+        padding: 7px 28px;
         line-height: 18px;
         text-align: center;
-
+        margin-left: auto;
         color: #FFFFFF;
-
+        min-width: 156px;
     }
 }
 
